# courses

./: .gitignore  .travis.yml  Makefile  README.md  cabal.project.freeze  courses.cabal  cs3300.md  cse_syllabus.docx  syllabus.tex
cse/: .gitignore  ArtificialIntelligence.md  CS100 Introduction to Programming.md  CS1020-Introduction-to-Programming-Lab.md  CS1020-Introduction-to-Programming.md  CS1100 Introduction to Programming.md  CS1100-Introduction-to-Programming.md  CS2010-Logic-for-Computing.md  CS2020-Discrete-Mathematics-for-Computer-Science.md  CS2030-Data-Structures-and-Algorithms.md  CS2040-Design-and-Analysis-of-Algorithms.md  CS2060-Computer-Organisation.md  CS2080-Artificial-Intelligence.md  CS2130-Data-Structures-and-Algorithms-Laboratory.md  CS2600-Computer-Organisation.md  CS2610-CO-Lab.md  CS2800 Data Structures and Algorithms.md  CS2800-Data-Structures-and-Algorithms.md  CS3010-Operating-Systems.md  CS3020-Database-Management-Systems.md  CS3030-Paradigms-of-Programming.md  CS3040-Compiler-Design.md  CS3050-Theory-of-Computation.md  CS30xx-Artificial-Intelligence.md  CS3100-Paradigms-of-Programming.md  CS3110-Operating-Systems-Lab.md  CS3140-Compiler-Design-Laboratory.md  CS3300-Paradigms-of-Programming.md  CS3700-Introduction-to-Database-Systems.md  CS4010-Computer-Networks.md  CS4150-Computer-Networks-Lab.md  CS4501 Introduction to Machine Learning  CS4801-Principles-of-Machine-Learning  CS4804-Convex-Optimization.md  CS4806-Theory-and-Practice-of-Data-Science.md  CS4807 Introduction to Machine Learning  CS5003-Parameterized-Algorithms.md  CS5004-Approximation-Algorithms.md  CS5009-Algorithms.md  CS5010-Graph-Theory-and-Combinatorics.md  (+83 more)
senate/: Makefile  README.md  working.org
senate/archive/: 15-01-2018-BAC-meeting.org
src/: Course.hs  build.hs  latex.hs
src/templates/: all-courses.tex  course.tex
