name:                courses
version:             0.1.0.0
homepage:            https://github.com/iitpkd/courses
license:             BSD3
license-file:        LICENSE
author:              Piyush P Kurur
maintainer:          ppk@cse.iitk.ac.in
copyright:           2017, Piyush P Kurur
build-type:          Simple
extra-source-files:  README.md
bug-reports: https://github.com/iitpkd/courses/issues
cabal-version:       >=1.10

source-repository head
  type:        git
  location:    https://github.com/iitpkd/courses



executable compilelatex
  hs-source-dirs:      src
  main-is: latex.hs
  other-modules:      Course
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , data-default
                     , filepath
                     , pandoc
                     , pandoc-types
                     , text
                     , vector
                     , yaml
  default-language:    Haskell2010
