cabal-version: 3.0

name:                courses
version:             0.1.0.0
homepage:            https://github.com/iitpkd/courses
license:             Apache-2.0
license-file:        LICENSE
author:              Piyush P Kurur
maintainer:          ppk@cse.iitk.ac.in
copyright:           2017, Piyush P Kurur
build-type:          Simple
extra-source-files:  README.md
bug-reports: https://github.com/iitpkd/courses/issues


source-repository head
  type:        git
  location:    https://github.com/iitpkd/courses

common defaults
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base >= 4.7 && < 5

executable driver
  import: defaults
  hs-source-dirs:      src
  main-is: driver.hs
  build-depends: aeson
               , filepath
               , pandoc
               , slick
               , shake
               , unordered-containers
               , vector
               , data-default
               , text
